--- a/communityboard/static/css/style-cindex.css
+++ b/communityboard/static/css/style-cindex.css
@@ -1,6 +1,7 @@
 body{
     display:flex;
     flex-direction: column;
+    background-color: #F2D99E;
 }
 a {
     text-decoration: none;
@@ -56,7 +57,7 @@ select {
 
 div.c0 {
     border-radius:10px;
-    background-color: #F2D99E;
+    background-color: #F6D5BB;
     border: 5px solid transparent;
     box-shadow: 1px 1px 1px 1px gray;
     color:#4e5227;
