--- a/communityboard/templates/communityboard/communityboard_index.html
+++ b/communityboard/templates/communityboard/communityboard_index.html
@@ -11,7 +11,7 @@
 
     <!-- custom CSS -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style-cindex.css' %}?after">
+    <link rel="stylesheet" href="{% static 'css/style-cindex.css' %}">
 
     <!-- Font -->
     <link rel="stylesheet" type="text/css"
@@ -36,24 +36,34 @@
         <select id="header-select" onchange="location=this.value">
             {% if header == '' %}
                 <option hidden class="header-all" value="/communityboard">전체</option>
-                <option class="header-h1" value="?header=h1">요리재료게시판</option>
-                <option class="header-h2" value="?header=h2">자유게시판</option>
-                <option class="header-h3" value="?header=h3">우리동네보기</option>
+                <option class="header-h1" value="?header=h1">자유게시판</option>
+                <option class="header-h2" value="?header=h2">리뷰게시판</option>
+                <option class="header-h3" value="?header=h3">재료나눔게시판</option>
+                <option class="header-h4" value="?header=h4">우리동네만 보기</option>
             {% elif header == 'h1' %}
-                <option hidden class="header-h1" value="?header=h1">요리재료게시판</option>
+                <option hidden class="header-h1" value="?header=h1">자유게시판</option>
                 <option class="header-all" value="/communityboard">전체</option>
-                <option class="header-h2" value="?header=h2">자유게시판</option>
-                <option class="header-h3" value="?header=h3">우리동네보기</option>
+                <option class="header-h2" value="?header=h2">리뷰게시판</option>
+                <option class="header-h3" value="?header=h3">재료나눔게시판</option>
+                <option class="header-h4" value="?header=h4">우리동네만 보기</option>
             {% elif header == 'h2' %}
-                <option hidden class="header-h2" value="?header=h2">자유게시판</option>
+                <option hidden class="header-h2" value="?header=h2">리뷰게시판</option>
                 <option class="header-all" value="/communityboard">전체</option>
-                <option class="header-h1" value="?header=h1">요리재료게시판</option>
-                <option class="header-h3" value="?header=h3">우리동네보기</option>
+                <option class="header-h1" value="?header=h1">자유게시판</option>
+                <option class="header-h3" value="?header=h3">재료나눔게시판</option>
+                <option class="header-h4" value="?header=h4">우리동네만 보기</option>
             {% elif header == 'h3' %}
-                <option hidden class="header-h3" value="?header=h3">우리동네보기</option>
+                <option hidden class="header-h3" value="?header=h3">재료나눔게시판</option>
                 <option class="header-all" value="/communityboard">전체</option>
-                <option class="header-h2" value="?header=h2">자유게시판</option>
-                <option class="header-h1" value="?header=h1">요리재료게시판</option>
+                <option class="header-h1" value="?header=h1">자유게시판</option>
+                <option class="header-h2" value="?header=h2">리뷰게시판</option>
+                <option class="header-h4" value="?header=h4">우리동네만 보기</option>
+            {% elif header == 'h4' %}
+                <option hidden class="header-h4" value="?header=h4">우리동네만 보기</option>
+                <option class="header-all" value="/communityboard">전체</option>
+                <option class="header-h1" value="?header=h1">자유게시판</option>
+                <option class="header-h2" value="?header=h2">리뷰게시판</option>
+                <option class="header-h3" value="?header=h3">재료나눔게시판</option>
             {% endif %}
         </select>
     </div>
