--- a/mainpage/templates/mainpage/header.html
+++ b/mainpage/templates/mainpage/header.html
@@ -17,7 +17,7 @@
                 <input id='searchfield' type='text' max_length=255 autocomplete='off'>
                 <button class='searchbtn' onclick="search_recipe(); return false;">검색</button>
             </div>
-            <a href="{% url 'mainpage:weather' %}" class="weather">
+            <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
                 <div class="temp"></div>
                 <div class="icon"></div>
             </a>
