--- a/users/static/style1.css
+++ b/users/static/style1.css
@@ -23,9 +23,9 @@ body::before{
 
 .login-form {
     position: relative; z-index: 2;
-    height: 100%;
+    
     border-radius: 20px;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.);
 }
 .login-form h1 {
     font-size: 30px; color: rgb(255, 255, 255);
