--- a/mainpage/templates/mainpage/ingredients_result.html
+++ b/mainpage/templates/mainpage/ingredients_result.html
@@ -10,6 +10,7 @@
     <title>Ingredient Result Page</title>
 </head>
 <body>
+
     <div style="height:100px;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="navbar_logo">
@@ -17,6 +18,13 @@
                     <img src="{% static 'logo.png' %}">
                 </a>
             </div>
+            {% if user.is_authenticated %}
+                <p>{{request.user.first_name}}님 환영합니다.</p>
+                <a href="{% url 'users:logout' %}"><button> 로그아웃 </button> </a>
+            {% else %}
+                <p> 로그인 해야 이용 가능합니다 </p>
+                <a href="{% url 'users:login' %}"><button> 로그인 </button> </a>
+            {% endif %}
             <ul class="navbar_menu">
                 <li><a href="{% url 'mypage:main' %}">마이페이지</a></li>
                 {% comment %} <li><a href=''>나눔 게시판</a></li> {% endcomment %}
@@ -26,7 +34,7 @@
             <div class="navbar_right">
                 <div class="search">
                     <input id='searchfield' type='text' max_length=255 autocomplete='off'>
-                    <button class='searchbtn' onclick="search_recipe(); return false;"">검색</button>
+                    <button class='searchbtn' onclick="search_recipe(); return false;">검색</button>
                 </div>
                 <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
                     <div class="temp"></div>
@@ -49,11 +57,15 @@
         </div>
 
         <div style="width:100%; height:20%; background-color:#BC0">
-            <p> yolov5를 통해 detect된 재료 : {{ user_data }}<p>
-            <h2> {{ recommend }} </h2>
+            <p> yolov5를 통해 detect된 재료 : {{ user_data }}</p>        
         </div>
 
-        <div id='ingredient_result'>
+        <div style="width:100%; height:20%; background-color:#AC0">
+            <p> 추천된 레시피 : {{ recommend }} <p>
+        </div>
+
+        <div id='ingredient_result' style="width:100%; height:100%; background-color:#DC0;"  >
+            <p> 사용자 추가 식재료 </p>
             <ul id='ingredient_list'>
             </ul>
         </div>
@@ -63,8 +75,6 @@
             <button id="btn2" onclick="ingred_recipe();">레시피 추천</button>
         </div>
     </div>
-
-
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="{% static 'main.js' %}"></script>
@@ -101,7 +111,6 @@
 
         /* 재료 수정 페이지 이동 */
         function ingred_change() {
-
             const ingred_list = document.getElementById('ingredient_list');
             const list_a = ingred_list.getElementsByTagName('li');
             for (let i = 0; i < list_a.length; i++) {
