--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -20,6 +20,13 @@
                     <img src="{% static 'logo.png' %}">
                 </a>
             </div>
+            {% if user.is_authenticated %}
+                <p>{{request.user.first_name}}님 환영합니다.</p>
+                <a href="{% url 'users:logout' %}"><button> 로그아웃 </button> </a>
+            {% else %}
+                <p> 로그인 해야 이용 가능합니다 </p>
+                <a href="{% url 'users:login' %}"><button> 로그인 </button> </a>
+            {% endif %}
             <ul class="navbar_menu">
                 <li><a href="{% url 'mypage:main' %}">마이페이지</a></li>
                 {% comment %} <li><a href=''>나눔 게시판</a></li> {% endcomment %}
@@ -42,21 +49,6 @@
         </nav>
     </div>
 
-    {% comment %} {% if login_session %}
-    <a><button> 로그아웃 </button> </a>
-    {% else %}
-    <a><button> 로그인 </button> </a>
-    {% endif %} {% endcomment %}
-
-    {% if user.is_authenticated %}
-        <p>{{request.user.first_name}}님은 현재 {{request.user.allergyinfo}} 대한 알러지가 있습니다 </p>
-        <a href="{% url 'users:logout' %}"><button> 로그아웃 </button> </a>
-        
-    {% else %}
-        <p> 로그인 해야 이용 가능합니다 </p>
-        <a href="{% url 'users:login' %}"><button> 로그인 </button> </a>
-    {% endif %}
-    
     <section class="bg-primary py-5">
         <div id="container">
             <div class="fridge-img">
