--- a/mainpage/templates/mainpage/header.html
+++ b/mainpage/templates/mainpage/header.html
@@ -17,10 +17,10 @@
                 <input id='searchfield' type='text' max_length=255 autocomplete='off'>
                 <button class='searchbtn' onclick="search_recipe(); return false;">검색</button>
             </div>
-            <a href="{% url 'mainpage:weather' %}" class="weather">
+            {% comment %} <a href="{% url 'mainpage:weather' %}" class="weather"> {% endcomment %}
                 <div class="temp"></div>
                 <div class="icon"></div>
-            </a>
+            {% comment %} </a> {% endcomment %}
         </div>
         <a href='#' class="navbar_togglebtn">
             <i class="fas fa-bars"></i>
