--- a/communityboard/templates/communityboard/communityboard_create.html
+++ b/communityboard/templates/communityboard/communityboard_create.html
@@ -24,7 +24,14 @@
     <script src="https://kit.fontawesome.com/22dc6176d9.js" crossorigin="anonymous"></script>
 </head>
 <main>
-
+    {% for message in messages %}
+    <div class="alert {{ message.tags }} alert-auto-dismissible alert-dismissible notification-container text-center" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        {{ message }}
+    </div>
+    {% endfor %}
 <br>
 <body>
 <div class="container">
