--- a/mainpage/templates/mainpage/ingredients_result.html
+++ b/mainpage/templates/mainpage/ingredients_result.html
@@ -1,4 +1,5 @@
 {% load static%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@
 </head>
 <body>
 
-    <div style="height:100px;">
+    {% comment %} <div style="height:100px;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="navbar_logo">
                 <a href="{% url 'mainpage:mainpage' %}">
@@ -27,7 +28,7 @@
             {% endif %}
             <ul class="navbar_menu">
                 <li><a href="{% url 'mypage:main' %}">마이페이지</a></li>
-                {% comment %} <li><a href=''>나눔 게시판</a></li> {% endcomment %}
+                <li><a href=''>나눔 게시판</a></li>
                 <li><a href="{% url 'recipeboard:recipeboard_index' %}">레시피 게시판</a></li>
                 <li><a href="{% url 'communityboard:communityboard_index' %}">커뮤니티 게시판</a></li>
             </ul>
@@ -46,6 +47,13 @@
             </a>
         </nav>
     </div>
+    {% endcomment %}
+
+    {% addtoblock "css" %}
+        <link rel="stylesheet" href="{% static 'mainpage/header.css' %}"/>
+    {% endaddtoblock %}
+
+    {% include "mainpage/header.html" %}
     
     <div id='ingredient_container'>
         <div style="width:100%; height:20%; background-color:#CF0">
@@ -132,6 +140,8 @@
             };
             window.localStorage.clear();
         };
+
+
     </script>
 </body>
 </html>
