서비스 FLOW + 세션 로그인 로그아웃 구현

--- a/communityboard/templates/communityboard/communityboard_create.html
+++ b/communityboard/templates/communityboard/communityboard_create.html
@@ -24,6 +24,7 @@
     <script src="https://kit.fontawesome.com/22dc6176d9.js" crossorigin="anonymous"></script>
 </head>
 <main>
+    {% include "mainpage/header.html" %}
     {% for message in messages %}
     <div class="alert {{ message.tags }} alert-auto-dismissible alert-dismissible notification-container text-center" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
