--- a/communityboard/templates/communityboard/communityboard_index.html
+++ b/communityboard/templates/communityboard/communityboard_index.html
@@ -25,7 +25,7 @@
 </head>
 
 <main>
-
+    {% include "mainpage/header.html" %}
 <div class="container" id="bar">
     {% if kw %}
     <div id="selector">
