--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -34,7 +34,27 @@
                 <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
                     <div class="temp"></div>
                     <div class="icon"></div>
+                    <div class="my_info">
+                        {% if user.is_authenticated %}
+                            <div class="main_common">
+                                <p>{{request.user.username}}님 환영 합니다. </p>
+                                <a href="{% url 'users:logout' %}"><button> 로그아웃 </button> </a>
+                            </div>
+                        {% else %}
+                            <div class="main_common">
+                                <p> 로그인 해야 이용 가능합니다 </p>
+                                <a href="{% url 'users:login' %}"><button> 로그인 </button> </a>
+                            </div>
+                        {% endif %}   
+                    </div>
                 </a>
+                {% comment %} <div class="my_info">
+                    {% if user.is_authenticated %}
+                        <p>{{request.user.first_name}}님은 현재 {{request.user.allergyinfo}} 대한 알러지가 있습니다 </p>
+                    {% else %}
+                        <p> 로그인 해야 이용 가능합니다 </p>
+                    {% endif %}
+                </div> {% endcomment %}
             </div>
             <a href='#' class="navbar_togglebtn">
                 <i class="fas fa-bars"></i>
@@ -62,7 +82,7 @@
             </div>
             <div id="popup_layer" onClick="close()">
                 <div id="popup">
-                    {% comment %} <iframe src="http://127.0.0.1:8000/mainpage/video_feed" width=640 height=480> </iframe> {% endcomment %}
+                    <iframe src="http://127.0.0.1:8000/mainpage/video_feed" width=640 height=480> </iframe>
             </div> 
             <div id="button">
                 <button id="btn1" onclick="cameraAccess();">영상 촬영</button>
