--- a/mainpage/templates/mainpage/recipe_detail.html
+++ b/mainpage/templates/mainpage/recipe_detail.html
@@ -9,89 +9,63 @@
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href='{% static "recipe.css" %}'>
+        <link rel="stylesheet" type="text/css" href='{% static "recipe.css" %}'>   
     </head>
     <body>
         <!-- 메뉴 삽입 -->
         {% include "mainpage/header.html" %}
-        <div class="cont_principal">
-            <div class="cont_central">
-              <div class="cont_modal cont_modal_active">
-                <div class="cont_photo">
-                    <div class="cont_img_back">
-                        <img src="https://s-media-cache-ak0.pinimg.com/736x/57/98/9f/57989f2a2e186e38bf93429aa395120c.jpg" alt="" />
-                    </div>
-                    <div class="cont_mins">
-                        <div class="sub_mins">
-                            <h3>50</h3>
-                            <span>MINS</span>
-                        </div>
+        <div class="wrap">
+            <div class="cont_photo">
+                <div class="cont_img_back">
+                    <div class="cont_title">
+                        <h3>{{recipe.title}}</h3>
                         <div class="cont_icon_right">
                             <a href="#">  <i class="material-icons">&#xE8E7;</i></a>
                         </div>
                     </div>
-                    <div class="cont_servings">
-                        <h3>4</h3>
-                        <span>SERVINGS</span>
-                    </div>
-                    <div class="cont_detalles">
-                        <h3>Shakshuka With Feta</h3>
-                        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sagittis est est aliquam, sed faucibus massa lobortis. Maecenas non est justo.</p>
+                    
+                    <img id="foodImg" src="https://s-media-cache-ak0.pinimg.com/736x/57/98/9f/57989f2a2e186e38bf93429aa395120c.jpg" alt="" />
+                </div>
+                <div class="cont_mins">
+                    <div class="sub_mins">
+                        <h3>{{cook_time}}</h3>
+                        <span>MINS</span>
                     </div>
                 </div>
-                <div class="cont_text_ingredients">
-                    <div class="cont_over_hidden">
-                        <div class="cont_tabs">
-                            <ul>
-                                <li><a href="#"><h4>INGREDIENTS</h4></a></li>
-                                <li><a href="#"><h4>PREPARATION</h4></a></li>
-                            </ul>  
-                        </div>
-               
-                        <div class="cont_text_det_preparation">
-                            <div class="cont_title_preparation">
-                                <p>STEP 1</p>
-                            </div>
-                            <div class="cont_info_preparation">
-                                <p>Heat oven to 375 degress</p>
-                            </div>  
-                            <div class="cont_text_det_preparation">
-            
-                                <div class="cont_title_preparation">
-                                    <p>STEP 2</p>
-                                </div>
-                                <div class="cont_info_preparation">
-                                    <p>Heat oil in a large skillet over medium-low head. Add onion and bell papper. Cook gently until very soft, about 20 minutes. Add garlic and cook until tender, 1 to 2 minutes; stir in cumin, paprika and cook 1 minute. Pour in tomatoes and season with 3/4 teaspoon salt and 1/4 teaspoon pepper;</p>
-                                </div> 
-              
-                            </div>
-                        </div>  
-                        <div class="cont_btn_mas_dets">
-                            <a href="#"><i class="material-icons">&#xE313;</i></a>
-                        </div>               
-                    </div>
-                    <div class="cont_btn_open_dets">
-                        <a href="#e" onclick="open_close()"><i class="material-icons">&#xE314;</i></a>
-                    </div>
+                <div class="cont_servings">
+                    <h3>1</h3>
+                    <span>SERVINGS</span>
                 </div>
+            </div>
+            <div class="cont_detalles">
+                <h3>INGREDIENTS</h3>
+                <p>{{recipe.ingre}}</p>
+            </div>
+            <div class="cont_text_ingredients">
+                <div class="cont_text_det_preparation">
+                    {% for content in explain %}
+                    <div class="cont_title_preparation">
+                        <p>STEP {{forloop.counter}}</p>
+                    </div>
+                    <div class="cont_info_preparation">
+                        <p>{{content|linebreaks}}</p>
+                    </div>
+                    <br>
+                    {% endfor %}
+                </div>                
             </div>
         </div>
 
         <script>
-            window.onload = function(){
-                document.querySelector('.cont_modal').className = "cont_modal";    
+            // 빈 P태그 제거
+            // .cont_info_preparation > p:nth-child(1)
+            const del_p = document.getElementsByClassName("cont_info_preparation");
+            for (let i = 0; i < del_p.length; i++) {
+                const child = del_p[i].childNodes;
+                child[3].remove();
+                child[1].remove();         
             }
-            var c = 0;
-            function open_close(){
-                if(c % 2 == 0){    
-                    document.querySelector('.cont_modal').className = "cont_modal cont_modal_active";  
-                    c++;
-                }
-                else {
-                    document.querySelector('.cont_modal').className = "cont_modal";  
-                    c++;    
-                }  
-            }
+
         </script>
     </body>
 </html>
