--- a/mypage/static/mypage.css
+++ b/mypage/static/mypage.css
@@ -22,7 +22,7 @@ body {
 form {
     display: flex;
     flex-direction: column;
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
 }
 input {
     width: 90%;
