--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -1,13 +1,65 @@
 body {
-    margin: 0;
+    display:flex;
+    flex-direction: column;
 }
-
-ul, li {
+.list {
+    margin:0 auto;
+}
+.card {
+    border-radius: 20px;
+    width: 80%;
+    height: auto;
+    margin:0 auto;
+    background-color: #EEB541;
+}
+.image {
+    width:100%;
+    height:100%;
+    overflow:hidden;
+}
+img {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    width:100%;
+    height:100%;
+}
+.recipe-title {
+    font-size:30px;
+    font-weight:bold;
+    text-align: center;
+}
+.blank {
+    padding-bottom: 15%;
+}
+.sblank {
+    padding-bottom: 10%;
+}
+@media (min-width: 700px ) {
+    .list {
+        margin:0 auto;
+    }
+    .card {
+        width: 60%;
+        margin:0 auto;
+    }
+    img {
+        display:block;
+        margin:0 auto;
+        width:80%;
+    }
+}
+/* ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
+li {
 
+}
+img {
+    max-width: 100%;
+    height:auto;
+} */
 a {
     text-decoration: none;
     color: black;
