--- a/mainpage/templates/mainpage/ingredients_result.html
+++ b/mainpage/templates/mainpage/ingredients_result.html
@@ -10,7 +10,9 @@
     <title>Ingredient Result Page</title>
 </head>
 <body>
-    <div style="height:100px;">
+    {% include "mainpage/header.html" %}
+
+    {% comment %} <div style="height:100px;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="navbar_logo">
                 <a href="{% url 'mainpage:mainpage' %}">
@@ -19,7 +21,7 @@
             </div>
             <ul class="navbar_menu">
                 <li><a href="{% url 'mypage:main' %}">마이페이지</a></li>
-                {% comment %} <li><a href=''>나눔 게시판</a></li> {% endcomment %}
+                <li><a href=''>나눔 게시판</a></li>
                 <li><a href="{% url 'recipeboard:recipeboard_index' %}">레시피 게시판</a></li>
                 <li><a href="{% url 'communityboard:communityboard_index' %}">커뮤니티 게시판</a></li>
             </ul>
@@ -37,7 +39,7 @@
                 <i class="fas fa-bars"></i>
             </a>
         </nav>
-    </div>
+    </div> {% endcomment %}
 
     <div id='ingredient_container'>
         <div id='ingredient_result'>
