--- a/mainpage/templates/mainpage/recipe_recom.html
+++ b/mainpage/templates/mainpage/recipe_recom.html
@@ -10,39 +10,40 @@
     <title>Ingredients Recommendation Page</title>
 </head>
 <body>
-    <div style="height:100px;">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="navbar_logo">
-                <a href="{% url 'mainpage:mainpage' %}">
-                    <img src="{% static 'logo.png' %}">
-                </a>
-            </div>
-            <ul class="navbar_menu">
-                <li><a href="{% url 'mypage:main' %}">마이페이지</a></li>
-                {% comment %} <li><a href=''>나눔 게시판</a></li> {% endcomment %}
-                <li><a href="{% url 'recipeboard:recipeboard_index' %}">레시피 게시판</a></li>
-                <li><a href="{% url 'communityboard:communityboard_index' %}">커뮤니티 게시판</a></li>
-            </ul>
-            <div class="navbar_right">
-                <div class="search">
-                    <input id='searchfield' type='text' max_length=255 autocomplete='off'>
-                    <button class='searchbtn' onclick="search_recipe(); return false;"">검색</button>
-                </div>
-                <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
-                    <div class="temp"></div>
-                    <div class="icon"></div>
-                </a>
-            </div>
-            <a href='#' class="navbar_togglebtn">
-                <i class="fas fa-bars"></i>
-            </a>
-        </nav>
-    </div>
+        {% include "mainpage/header.html" %}
 
     <div class="content-title">
         <h3>재료 추천 레시피</h3>
     </div>
-    <div class="recomm_list">
+
+    <div class="list">
+        {% comment %} {% for %} {% endcomment %}
+        <div class ="card">
+            <div class ="image">
+            <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="" onclick="recipe_detail();">
+            </div>
+            <div class = "sblank"></div>
+            <div class="recipe-title" onclick="recipe_detail();">
+                레시피 이름
+            </div>
+            <div class = "sblank"></div>
+        </div>
+        <div class="blank"></div>
+        {% comment %} {% endfor %} {% endcomment %}
+        <div class ="card">
+            <div class ="image">
+            <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="" onclick="recipe_detail();">
+            </div>
+            <div class = "sblank"></div>
+            <div class="recipe-title" onclick="recipe_detail();">
+                레시피 이름
+            </div>
+            <div class = "sblank"></div>
+        </div>
+        <div class="blank"></div>
+    </div>
+
+    {% comment %} <div class="recomm_list">
         <ul class="recipe_list">
             <li class="recipe">
                 <div class="recipe_img">
@@ -76,72 +77,8 @@
                     이름
                 </div>
             </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
-            <li class="recipe">
-                <div class="recipe_img">
-                    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2020/08/18/32775e06923a4bef0cb6093ff84d28ef1.jpg" alt="">
-                </div>
-                <div class="recipe_title">
-                    이름
-                </div>
-            </li>
         </ul>
-    </div>
+    </div> {% endcomment %}
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="{% static 'main.js' %}"></script>
