--- a/users/static/style.css
+++ b/users/static/style.css
@@ -29,6 +29,7 @@ body::before{
 .login-form {
     position: relative; z-index: 2; 
     border-radius: 20px;
+    width: 350px;
     background-color: rgba(0, 0, 0, 0.3);
 }
 .login-form h1 {
