--- a/users/static/style1.css
+++ b/users/static/style1.css
@@ -1,4 +1,4 @@
-
+/* 회원가입 */
 /* bbbbdd */
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 
@@ -8,7 +8,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /*height: 100%;*/ 
+    /*background-color: #F9E1A3;*/ /*bbbbdd */
     background: url("bgg.jpg") no-repeat center;
     background-size: cover;
 }
@@ -22,13 +22,13 @@ body::before{
 } 
 
 .login-form {
-    position: relative; z-index: 2;
-    
+    position: relative; z-index: 2; 
     border-radius: 20px;
-    background-color: rgba(0, 0, 0, 0.);
+    width: 350px;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 .login-form h1 {
-    font-size: 30px; color: rgb(255, 255, 255);
+    font-size: 34px; color: rgb(255, 255, 255); 
     text-align: center;
     margin-top: 20px;
     font-weight : bold;
@@ -39,7 +39,7 @@ body::before{
     margin-top: 20px;
 }
 .int-area {
-    width: 400px; position: relative;
+    position: relative;
     margin-top : 20px;
 }
 .int-area:first-child {margin-top: 0;}
@@ -49,7 +49,16 @@ body::before{
     background-color: transparent;
     border: none;
     border-bottom: 1px solid #999;
-    font-size: 18px; color: #dcaa13;
+    font-size: 18px; color: #fff;
+    outline: none;
+}
+.int-area2 input {
+    width: 100%;
+    padding:20px 10px 10px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #999;
+    font-size: 18px; color: #fff;
     outline: none;
 }
 
@@ -72,12 +81,12 @@ body::before{
 .int-area input:focus + label,
 .int-area input:valid + label {
     top: -2px;
-    font-size: 13px; color : #eaa316;
+    font-size: 13px; color : #eaa316;/*166cea */
 }
 
-.btn-area {margin-top : 10px;}
+.btn-area {margin-top : 30px;}
 .btn-area button {
-    width: 100%; height: 40px;
+    width: 100%; height: 50px;
     background: #eaa316;
     color: #fff;
     font-size: 20px;
@@ -85,6 +94,7 @@ body::before{
     border-radius: 25px;
     cursor:pointer;
 }
+
 .caption{
     margin-top : 20px;
     text-align: center;
@@ -100,6 +110,6 @@ body::before{
 
 
 .btn btn-primary {
-    width:200px;
+    width:300px;
     margin:auto;
 }
