--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -75,7 +75,7 @@ style
         
         {% load static %}
         <script src="{% static 'a.js' %}"></script>
-        <link rel="stylesheet" href="{% static 'style.css' %}? after">
+        <link rel="stylesheet" href="{% static 'style.css' %}">
         <html lang = "ko">
         <head>
             <meta charset="UTF-8">
