--- a/recipeboard/templates/recipeboard/recipeboard_detail.html
+++ b/recipeboard/templates/recipeboard/recipeboard_detail.html
@@ -11,7 +11,7 @@
 
     <!-- custom CSS -->
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style-detail.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style-detail.css' %}?after">
 
     <!-- Font -->
     <link rel="stylesheet" type="text/css"
@@ -95,7 +95,7 @@
         <span>재료</span>
     </div>
     <br>
-    <div>{{board.ingredient}}</div>
+    <div>{{board.ingredient|linebreaks}}</div>
 
     <br><br>
     <hr>
@@ -103,7 +103,7 @@
         <span>조리방법</span>
     </div>
     <br>
-    <div>{{board.detail}}</div>
+    <div>{{board.detail|linebreaks}}</div>
 
     <br><br><br>
     <hr>
@@ -126,7 +126,7 @@
             </div>
         </div>
         <div class="comment2">
-            {{comment.detail}}
+            {{comment.detail|linebreaks}}
         </div>
         <div class="comment3">
             {{comment.time|date:"Y-m-d H:i:s"}}
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="bcomment2">
-                <span>{{babycomment.detail}}</span>
+                <span>{{babycomment.detail|linebreaks}}</span>
             </div>
             <div class="bcomment3">
                 <span id>{{babycomment.time|date:"Y-m-d H:i:s"}}</span>
