--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -118,6 +118,20 @@ a {
     height: auto;
     background-color: #666;
 }
+.cam_area {
+    position: relative; 
+    /* absolute는 부모가 relative일 때 부모를 따라간다. */
+    width: 100%;
+    height: 500px;
+    /* padding-bottom: %; 16:9 비율 */
+    /* text-align: center; */
+  }
+#video {
+    /* position: absolute; */
+    width: 100%; /* 부모에 맞게 꽉 채운다. */
+    height: 380px;
+}
+
 #button {
     margin-top: 20px;
     text-align: center;
