--- a/mainpage/templates/mainpage/recipe_recom.html
+++ b/mainpage/templates/mainpage/recipe_recom.html
@@ -26,7 +26,7 @@
             <div class="navbar_right">
                 <div class="search">
                     <input id='searchfield' type='text' max_length=255 autocomplete='off'>
-                    <button class='searchbtn' onclick="search_recipe(); return false;"">검색</button>
+                    <button class='searchbtn' onclick="search_recipe(); return false;">검색</button>
                 </div>
                 <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
                     <div class="temp"></div>
@@ -38,11 +38,22 @@
             </a>
         </nav>
     </div>
+    <div>
+        {{ data }}<br /> 
+        storage : {{ data.storage }}<br /> 
 
+        {% for item in re_data %}
+        <h3>{{ item.title }} / {{ item.ingre }} </h3>
+        --------------------------------------------------------------------------------------------------
+    {% endfor %}  
+    </div>
     <div class="content-title">
         <h3>재료 추천 레시피</h3>
     </div>
-    <div class="recomm_list">
+    {% comment %} <div>
+        <h3> {{data}} </h3>
+    <div> {% endcomment %}
+    {% comment %} <div class="recomm_list">
         <ul class="recipe_list">
             <li class="recipe">
                 <div class="recipe_img">
@@ -140,7 +151,7 @@
                     이름
                 </div>
             </li>
-        </ul>
+        </ul> {% endcomment %}
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
