레시피 css, 북마크, html 완료

--- a/mainpage/static/recipe.css
+++ b/mainpage/static/recipe.css
@@ -58,6 +58,11 @@
   font-size: 30px;
   line-height: 4rem;
 }
+#bookmark_add > span {
+  text-align:center;
+  font-size: 30px;
+  line-height: 4rem;
+}
 
 #foodImg {
   height: 100%;
