--- a/mainpage/templates/mainpage/header.html
+++ b/mainpage/templates/mainpage/header.html
@@ -17,7 +17,7 @@
 </script>
 
 <body>
-    <div style="height: 6.25em; background-color: #AFFB10E;">
+    <div style="height: 6.25em; background-color: #FFB10E;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="navbar_logo">
                 <a href="{% url 'mainpage:mainpage' %}">
