--- a/mainpage/static/header.css
+++ b/mainpage/static/header.css
@@ -174,13 +174,13 @@ a {
     align-self: center;
     text-align: center;
     top: 250px;
-    left:50px;
+    margin: auto;
     margin-bottom: 20px;
     width:280px;
 }
 
 #ingredient_result {
-    width: 80%;
+    width: 100%;
     height: auto;
     align-self: center;
 
@@ -338,8 +338,7 @@ ul#ingredient_list li {
     #ingredient_container {
         align-self: center;
         text-align: center;
-        margin-top: -20px;
-        margin-left: -9px;
+        margin: auto;
         
     }
     #ingredient_result {
